@@ -1,7 +1,8 @@
 
-R version 2.9.0 (2009-04-17)
-Copyright (C) 2009 The R Foundation for Statistical Computing
+R version 2.13.0 RC (2011-04-12 r55424)
+Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -65,29 +66,26 @@ Loading required package: splines
 > 
 > #  A second test of cumulative incidence
 > # compare results to Bob Gray's functions
-> #   This test is in the directory, but won't work unless you have
-> #   installed the cmprsk library!
+> #  The file gray1 is the result of 
 > #
-> temp <- suppressWarnings(library(cmprsk, logical.return=TRUE))
-> if (temp) {
-+     tstat <- ifelse(tdata$status==0, 0, 1+ (tdata$event=='death'))
-+     gray1 <- cuminc(tdata$time, tstat)
-+ 
-+     plot(gray1[[1]]$time, gray1[[1]]$est, type='l',
-+          ylim=range(c(gray1[[1]]$est, gray1[[2]]$est)),
-+          xlab="Time")
-+     lines(gray1[[2]]$time, gray1[[2]]$est, lty=2)
-+ 
-+     fit2 <- survfit(Surv(time, status) ~ 1, etype=event, tdata)
-+     matlines(fit2$time, 1-fit2$surv, col=2, lty=1:2, type='s')
-+ 
-+     # To formally match these is a bit of a nuisance.
-+     #  The cuminc function returns full step function, and survfit.ci only
-+     # the bottoms of the steps.
-+     #  The survfit.ci function returns all time points, cuminc only the jumps.
-+     temp1 <- tapply(gray1[[1]]$est, gray1[[1]]$time, max)
-+     indx1 <- match(names(temp1), fit2$time)
-+     aeq(temp1, 1-fit2$surv[indx1,1])
-+     }
+> #    tstat <- ifelse(tdata$status==0, 0, 1+ (tdata$event=='death'))
+> #    gray1 <- cuminc(tdata$time, tstat)
+> load("gray1.rda")
+> plot(gray1[[1]]$time, gray1[[1]]$est, type='l',
++      ylim=range(c(gray1[[1]]$est, gray1[[2]]$est)),
++      xlab="Time")
+> lines(gray1[[2]]$time, gray1[[2]]$est, lty=2)
+> 
+> fit2 <- survfit(Surv(time, status) ~ 1, etype=event, tdata)
+> matlines(fit2$time, 1-fit2$surv, col=2, lty=1:2, type='s')
+> 
+> # To formally match these is a bit of a nuisance.
+> #  The cuminc function returns full step function, and survfit.ci only
+> # the bottoms of the steps.
+> #  The survfit.ci function returns all time points, cuminc only the jumps.
+> temp1 <- tapply(gray1[[1]]$est, gray1[[1]]$time, max)
+> indx1 <- match(names(temp1), fit2$time)
+> aeq(temp1, 1-fit2$surv[indx1,1])
 [1] TRUE
+>     
 > 
