@@ -5,6 +5,9 @@
   \itemize{
     \item Unitialized variable in calcuation of the variance of the
     concordance.  Found on platform cross-checking by Brian Ripley.
+    \item Changed testci to use a fixed file of results from cmprsk
+    rather than invoking that package on-the-fly.  Suggested by the CRAN
+    maintainers.
   }
   }
 \section{Changes in version 2.36-7}{
